Оформил страничку номера

--- a/YusupovHotel/Pages/BookingPage.razor
+++ b/YusupovHotel/Pages/BookingPage.razor
@@ -102,7 +102,15 @@
 
 }
 
-                                    <style>
+<style>
+
+
+    body {
+        background-color: #eeeeee
+    }
+
+
+
 
 .section {
     position: relative;
