--- a/YusupovHotel/Pages/ClientsPage.razor
+++ b/YusupovHotel/Pages/ClientsPage.razor
@@ -6,7 +6,7 @@
 @inject NavigationManager manager
 @inject SingletonServise servise
 
-<section >
+<section>
 <div class="modal fade" id="modalRegisterForm" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -16,32 +16,38 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick="() => Clear()">
                 </button>
             </div>
-            <div class="modal-body mx-3">
+            <EditForm Model="@client" class="formRegistr" OnValidSubmit="@Submit">
+        <DataAnnotationsValidator />
+        <div class="modal-body mx-3">
                 <div class="md-form mb-5">
                     <i class="fas fa-user prefix grey-text" ></i>
                     <div id="inputBox">
-                        <input class="fas fa-envelope prefix grey-text" type="text" @bind-value=ClientName required="required">
+                        <InputText class="fas fa-envelope prefix grey-text" required="required" type="text" @bind-Value="client.ClientName"></InputText>
                         <span id="span">Фамилия, имя, отчество</span>
+                                <span style="margin-top: -4px"><ValidationMessage For="() => client.ClientName" /></span>
                     </div>
                 </div>
                 <div class="md-form mb-5">
                     <i class="fas fa-envelope prefix grey-text" ></i>
                     <div id="inputBox">
-                        <input class="fas fa-envelope prefix grey-text" type="text" @bind-value=Email required="required">
+                        <InputText class="fas fa-envelope prefix grey-text" type="text" @bind-Value=client.Email required="required"></InputText>
                         <span id="span">Почтовый адрес</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => client.Email" /></span>
                     </div>
                 </div>
                 <div class="md-form mb-5">
-                    <i class="fas fa-phone prefix grey-text" ></i>
+                    <i class="fas fa-phone prefix grey-text"></i>
                     <div id="inputBox">
-                        <input class="fas fa-envelope prefix grey-text" type="text" @bind-value=PhoneNumber maxlength="11" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" required="required">
+                        <InputMask class="fas fa-envelope prefix grey-text" type="text" required="required" @bind-Value="client.PhoneNumber" data-mask="+7(000)-000-00-00" />
                         <span id="span">Номер телефона</span>
-                    </div> 
-                 </div>
-            </div>
+                                <span style="margin-top: -4px"><ValidationMessage For="() => client.PhoneNumber" /></span>
+                    </div>
+                </div>
+        </div>
             <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-default btn-success" @onclick="() => AddNewClient()" >Добавить</button>
+                <button class="btn btn-default btn-success" type="submit">Добавить</button>
             </div>
+                </EditForm>
         </div>
     </div>
 </div>
@@ -52,7 +58,7 @@
     Добавить нового клиента
 </button>
 </div>
-    <table class="table">
+    <table class="table" style="overflow-y:auto">
         <thead >
             <tr>
                 <th>Фамиля, имя, отчество</th>
@@ -80,15 +86,21 @@
 {
     List<Client> clients = new List<Client>();
     List<Client> sortingClients = new List<Client>();
-    string ClientName = "";
-    string Email = "";
-    string PhoneNumber = "";
+    Client client = new Client("","","");
     string Search = "";
+    bool wasSubmitted;
+
     protected override void OnInitialized()
     {
         js.InvokeVoidAsync("ChangePanelsState");
         clients = Mongo.FindAllClient();
         sortingClients = clients;
+    }
+
+    public void Submit()
+    {
+        wasSubmitted = true;
+        AddNewClient();
     }
 
     private void Searching()
@@ -100,30 +112,17 @@
         .ToList();
     }
 
-
     private void AddNewClient()
     {
-        if (ClientName != "" && (PhoneNumber != "" && PhoneNumber.Length == 11) && Email != "")
-        {
-            if (Mongo.FindClient(Email) == null)
-            {
-                Mongo.AddClientToDB(new Client(ClientName, Email, PhoneNumber));
-                clients.Add(new Client(ClientName, Email, PhoneNumber));
-                Searching();
-                Clear();
-            }
-            else return;
-        }
-        else return;
+        Mongo.AddClientToDB(new Client(client.ClientName, client.Email, client.PhoneNumber));
+        clients.Add(new Client(client.ClientName, client.Email, client.PhoneNumber));
+        Searching();
+        Clear();
     }
-
-
 
     private void Clear()
     {
-        ClientName = "";
-        Email = "";
-        PhoneNumber = "";
+        client = new Client("", "", "");
     }
 
     private void OpenCurentClient(Client client)
@@ -135,6 +134,9 @@
 
 
 <style>
+    body {
+        background-color: #eeeeee
+    }
 
     .appbar{
         margin-bottom: 20px;
@@ -188,9 +190,9 @@
         transition: 0.5s;
     }
 
-    #inputBox input:valid ~ span,
+    #inputBox input:valid ~ #span,
 
-    #inputBox input:focus ~ span {
+    #inputBox input:focus ~ #span {
         color: grey;
         transform: translateX(-1px) translateY(-15px);
         font-size: 0.6em;
