--- a/YusupovHotel/Pages/_Host.cshtml
+++ b/YusupovHotel/Pages/_Host.cshtml
@@ -6,14 +6,13 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
-
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"  />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 <script type="text/javascript" src="_content/BlazorInputMask/Main.js"></script>
 <script type="text/javascript" src="_content/BlazorInputMask/IMask.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
 <script src="~/js/myJs.js"></script>
-
-<script>
-    
-</script>
+<script src="~/js/lightbox-plus-jquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
