--- a/YusupovHotel/Shared/MainLayout.razor
+++ b/YusupovHotel/Shared/MainLayout.razor
@@ -28,13 +28,14 @@
                         </div>
             }
             </div>
-            <article class="content px-4">
+        <article class="content px-4" >
                 @Body
             </article>
         </main>
 </div>
 
-@{
+@code{
+
     void LogOut()
     {
         servise.user = null;
