--- a/YusupovHotel/Shared/NavMenu.razor
+++ b/YusupovHotel/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="booking">
+                <span class="oi oi-plus" aria-hidden="true"></span> Бронирование*
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="rooms">
                 <span class="oi oi-key" aria-hidden="true"></span> Комнаты
             </NavLink>
