--- a/YusupovHotel/Shared/NavMenu.razor
+++ b/YusupovHotel/Shared/NavMenu.razor
@@ -27,11 +27,11 @@
                 <span class="oi oi-people" aria-hidden="true"></span> Клиенты
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+@*        <div class="nav-item px-3">
             <NavLink class="nav-link" href="room">
                 <span class="oi oi-people" aria-hidden="true"></span> Комната*
             </NavLink>
-        </div>
+        </div>*@
     </nav>
 </div>
 <style>
